# ChessDNA

./: .gitignore  README.md  WEB_RESEARCH.md  pyproject.toml  run_dev.ps1
.github/workflows/: ci.yml
chessdna/: __init__.py  __main__.py  app.py  cli.py  routes_downloads.py
chessdna.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
chessdna/core/: analyze.py  chesscom.py  http.py  lichess.py  pgn_utils.py  settings.py  uci.py
chessdna/static/: manifest.json  offline.html  sw.js
chessdna/templates/: _download_buttons.html  error.html  index.html  report.html
tests/: test_analyze_no_engine.py  test_cli_analyze_stdout_json.py  test_cli_pgninfo_json.py  test_cli_player.py  test_cli_version.py  test_http_retry.py  test_http_user_agent.py  test_pgn_utils.py  test_settings_clamp.py  test_web_analyze_pgn_text_no_engine.py  test_web_prefill_persistence.py  test_web_preview_reload_from_temp.py  test_web_preview_token.py  test_web_preview_validation.py
