[project]
name = "chessdna"
version = "0.1.0"
description = "PGN accuracy analysis + style modeling + imitation"
requires-python = ">=3.11"
dependencies = [
  "python-chess>=1.11.0",
  "requests>=2.31.0",
  "pydantic>=2.6.0",
  "rich>=13.0.0",

  # Web MVP
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
chessdna = "chessdna.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
